fix: build bugs

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
-    "next": "15.1.2",
+    "next": "15.2.0-canary.50",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sass": "^1.83.0",
