--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "axios": "^1.8.3",
     "next": "15.2.0-canary.50",
     "react": "19.0.0",
     "react-dom": "19.0.0",
