--- a/.github/workflows/nextjs2.yml
+++ b/.github/workflows/nextjs2.yml
@@ -4,6 +4,9 @@
 #
 name: Deploy Next.js site to Pages
 
+env:
+  NEXT_PUBLIC_API_BASE_URL: ${{ secrets.NEXT_PUBLIC_API_BASE_URL }}
+
 on:
   # Runs on pushes targeting the default branch
   push:
